--- a/index.html
+++ b/index.html
@@ -2,66 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Wheel of Fortune with Points &amp; Groups</title>
-  <!-- Link to external CSS file -->
+  <title>Spin the Wheel Tool</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Using Google Fonts for a modern look -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Spin the Wheel</h1>
+  <h1>Spin the Wheel Tool</h1>
 
   <!-- Audio elements -->
-  <audio id="spinSound" src="spin.mp3" preload="auto"></audio>
-  <audio id="resultSound" src="result.mp3" preload="auto"></audio>
+  <audio id="spinSound" src="roll.mp3" preload="auto"></audio>
+  <audio id="bellSound" src="bell.mp3" preload="auto"></audio>
 
-  <div id="mainContainer">
-    <!-- ITEMS TABLE: Label + Points -->
-      <div id="itemsTableContainer">
-      <table id="itemsTable">
-        <thead>
-          <tr>
-            <th>Item</th>
-            <th>Points</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- We'll add one default row in JS with placeholder -->
-        </tbody>
-      </table>
+  <!-- Controls -->
+  <div id="controls">
+    <!-- Text area for items -->
+    <div class="control-group">
+      <label for="itemsInput">Items (one per line; add points in () if desired):</label>
+      <textarea id="itemsInput" placeholder="Enter one item per line.&#10;Optionally add points in parentheses.&#10;Example: What is your name? (100)"></textarea>
     </div>
-
-    <div>
-      <button id="addRowBtn">Add Row</button>
-      <button id="updateWheelBtn">Update Wheel (Reset)</button>
-      <label style="margin-left:1em;">
-        <input type="checkbox" id="removeCheckbox">
-        Remove Landed Item (Next Spin)
-      </label>
+    <!-- Spin button and removal checkbox -->
+    <div class="control-group">
+      <button id="spinBtn">Spin</button>
+      <input type="checkbox" id="removeCheckbox">
+      <label for="removeCheckbox">Remove landed item</label>
     </div>
-
-    <!-- GROUPS Config (allow 0) -->
-    <div>
+    <!-- Teams controls -->
+    <div class="control-group">
       <label>Number of Groups:
-        <input type="number" id="numGroupsInput" min="0" value="2" style="width:60px">
+        <input type="number" id="numGroupsInput" min="0" value="2">
       </label>
       <button id="setGroupsBtn">Set Groups</button>
       <button id="clearAllBtn">Clear All Points</button>
-      <span id="turnIndicator" style="margin-left:1em;">Group 1's Turn</span>
-    </div>
-    <div id="groupsContainer"></div>
-
-    <!-- Spin button, then result, then wheel (centered) -->
-    <button id="spinBtn">Spin</button>
-    <div id="result">Result:</div>
-
-    <div id="wheelContainer">
-      <canvas id="wheel" width="500" height="500"></canvas>
-      <!-- The big black arrow on the right side -->
-      <div id="indicator"><</div>
+      <span id="turnIndicator">Group 1's Turn</span>
     </div>
   </div>
 
-  <!-- Reference external script -->
+  <!-- Container for team boxes -->
+  <div id="groupsContainer"></div>
+
+  <!-- The wheel canvas -->
+  <canvas id="wheel" width="340" height="340"></canvas>
+
+  <!-- Result display -->
+  <div id="result">Result: </div>
+
   <script src="script.js"></script>
 </body>
 </html>
