--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Spin the Wheel Tool</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Using Google Fonts for a modern look -->
+  <!-- Modern font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -12,41 +12,41 @@
   <h1>Spin the Wheel Tool</h1>
 
   <!-- Audio elements -->
-  <audio id="spinSound" src="roll.mp3" preload="auto"></audio>
+  <audio id="spinSound" src="spin.mp3" preload="auto"></audio>
   <audio id="bellSound" src="bell.mp3" preload="auto"></audio>
 
-  <!-- Controls -->
-  <div id="controls">
-    <!-- Text area for items -->
-    <div class="control-group">
-      <label for="itemsInput">Items (one per line; add points in () if desired):</label>
-      <textarea id="itemsInput" placeholder="Enter one item per line.&#10;Optionally add points in parentheses.&#10;Example: What is your name? (100)"></textarea>
+  <!-- Top controls container with two columns -->
+  <div id="topControls">
+    <div id="itemsControl">
+      <label for="itemsInput">Items (one per line; add points in () optionally):</label>
+      <textarea id="itemsInput" placeholder="Enter one item per line.
+Optionally add points in parentheses.
+Example: What is your name? (100)"></textarea>
     </div>
-    <!-- Spin button and removal checkbox -->
-    <div class="control-group">
-      <button id="spinBtn">Spin</button>
-      <input type="checkbox" id="removeCheckbox">
-      <label for="removeCheckbox">Remove landed item</label>
-    </div>
-    <!-- Teams controls -->
-    <div class="control-group">
-      <label>Number of Groups:
-        <input type="number" id="numGroupsInput" min="0" value="2">
-      </label>
-      <button id="setGroupsBtn">Set Groups</button>
-      <button id="clearAllBtn">Clear All Points</button>
-      <span id="turnIndicator">Group 1's Turn</span>
+    <div id="groupsControl">
+      <div class="group-settings">
+        <label for="numGroupsInput">Number of Groups:</label>
+        <input type="number" id="numGroupsInput" min="0" value="0">
+        <button id="setGroupsBtn">Set Groups</button>
+        <button id="clearAllBtn">Clear All Points</button>
+        <div id="turnIndicator"></div>
+      </div>
     </div>
   </div>
 
-  <!-- Container for team boxes -->
+  <!-- Spin button -->
+  <div id="spinControl">
+    <button id="spinBtn">Spin</button>
+  </div>
+
+  <!-- Wheel and result container -->
+  <div id="wheelContainer">
+    <canvas id="wheel" width="600" height="600"></canvas>
+    <div id="result">Result: </div>
+  </div>
+
+  <!-- Groups container (if teams exist) -->
   <div id="groupsContainer"></div>
-
-  <!-- The wheel canvas -->
-  <canvas id="wheel" width="340" height="340"></canvas>
-
-  <!-- Result display -->
-  <div id="result">Result: </div>
 
   <script src="script.js"></script>
 </body>
